2006-10-29  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb-query.c (gimp_pdb_print_entry): use
	gimp_pdb_get_strings() so we dump the right blurb and help for
	deprecated procedures.

2006-10-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/gimpcons.py: refactored, some UI polish.

	* plug-ins/pygimp/plug-ins/colorxhtml.py
	* plug-ins/pygimp/plug-ins/foggify.py
	* plug-ins/pygimp/plug-ins/palette-offset.py
	* plug-ins/pygimp/plug-ins/palette-sort.py
	* plug-ins/pygimp/plug-ins/palette-to-gradient.py
	* plug-ins/pygimp/plug-ins/py-slice.py
	* plug-ins/pygimp/plug-ins/shadow_bevel.py: use booleans instead
	of numbers for readability in gettext.install calls.

2006-10-28  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/paste-as-brush.scm
	* plug-ins/script-fu/scripts/paste-as-pattern.scm: Some variables
	were not being declared before first use. Spotted by Saul Goode.

2006-10-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/gimpcons.py: can't use gettext.install
	here because sys.displayhook fills __builtins__._ too and it'd
	be best to maintain that behavior.

2006-10-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/gimpcons.py: "Apply" output from the
	procedure browser windows now replaces the current line, to maintain
	semantics of the old console.

2006-10-28  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb-query.c: include deprecated procedures in the
	output of gimp-pdb-dump. Added #define DEBUG_OUTPUT which allows
	to dump to a format that works as input for "diff" and allows to
	easily compare two gimp version's PDB API.

2006-10-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-utils.[ch]
	(gimp_transform_matrix_flip_free): removed unused x,y,width,height
	parameters.

	* tools/pdbgen/pdb/drawable_transform.pdb: changed accordingly.

	* app/pdb/drawable_transform_cmds.c: regenerated.

2006-10-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
