@@ -53,6 +53,9 @@ plug_in_icc_profile_apply_rgb (GimpImage     *image,
   Gimp          *gimp = image->gimp;
   GimpProcedure *procedure;
 
+  if (gimp_image_base_type (image) == GIMP_GRAY)
+    return FALSE;
+
   procedure = gimp_pdb_lookup_procedure (gimp->pdb, ICC_PROFILE_APPLY_RGB_PROC);
 
   if (procedure &&
