@@ -1,3 +1,8 @@
+2006-10-29  Sven Neumann  <sven@gimp.org>
+
+	*  app/plug-in/plug-in-icc-profile.c
+	*  plug-ins/common/lcms.c: the plug-in doesn't handle GRAY* images.
+
 2006-10-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/pdb/gimppdb-query.c (gimp_pdb_print_entry): use
